# anti_fake_call_api

./: .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml  test_websocket.py
.github/workflows/: docker-image.yml
api_core/: asgi.py  logging_settings.py  settings.py  urls.py  wsgi.py
conversation/: admin.py  apps.py  constants.py  models.py  urls.py
conversation/migrations/: 0001_initial.py  0002_alter_conversationhistory_contact_and_more.py  0003_alter_uservirtualphonenumber_status.py
conversation/serializers/: contact_serializers.py  conversation_history_serializers.py  phone_number_verification_serializers.py  user_phone_number_serializers.py  user_virtual_phone_number_serializers.py  virtual_phone_number_related_field.py  virtual_phone_number_serializers.py
conversation/services/: data_generator.py  phone_number_verification_code_check_service.py  phone_number_verification_code_generator_service.py  twilio_conversation_service.py  twilio_service.py  user_virtual_phone_number_configuration_service.py  virtual_phone_number_generator.py
conversation/views/: contact_views.py  conversation_history_views.py  phone_number_verification_views.py  user_phone_number_views.py  user_virtual_phone_number_views.py  virtual_phone_number_views.py
docker/: runme.sh
real_time_voice/: apps.py  consumers.py  routing.py  urls.py
real_time_voice/services/: app.py  audio.py  openai.py  prompt-scam-detection.txt  scam_detection.py  sms.py  transcription.py  (+1 more)
third_parties/: apps.py  constants.py  urls.py
utils/: authentication.py
(+12 files in other folders)
